Clean up spacing issues, remove extra styles file, and add links to README as well as index

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 body {
   background: #ccd6dd;
   text-align: center;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 p {
@@ -16,33 +19,22 @@ a {
   text: none;
 }
 
-#myCarousel {
-  margin: auto;
-  background: #ccd6dd;
-}
-
-.container {
-  width: 90%;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
 .first {
   background: white;
   float:left;
-  height: 450px;
+  height: 400px;
 }
 
 .second {
   float: left;
   background: white;
-  height: 450px;
+  height: 400px;
 }
 
 .third {
   float: left;
   background: white;
-  height: 450px;
+  height: 400px;
   padding: 2%;
 }
 
